@@ -68,6 +68,7 @@ Anthony Briggs
     New Gamemaster guide
     Smoke testing script
 	Added a patch to limit tact-5 leaders based on points spent in war.
+	The Fracas variant
 Joseph Traub
     Changes, updates, and merging a few disparate branches
     Maintaining and extending the 4.0.X code.
